src/components/slider/_styles.pcss
@import "../../assets/styles/vars.gcss";

.pager {
  height: calc(2rem/var(--f_size));
  width: calc(50rem/var(--f_size));
  background-color: var(--c_link);
}

.slider {
  position: absolute;
  bottom: 0;
  left: 0;
}

:global(.slick-dots) {
  position: absolute;
  left: 0; bottom: calc(-60rem/var(--f_size));
  list-style: none;
  margin: 0;

  & li {
    display: inline-block;
    margin-right: calc(15rem/var(--f_size));
  }
}

:global(.slick-active) {
  & .pager {
    background-color: var(--c_txt);
  }
}

.next,
.prev {
  position: absolute;
  top: 0;
  z-index: 10;
  cursor: pointer;
  transition: all .3s ease-in;

  & svg {
    transition: all .3s ease-in;
  }

  &:hover {
    color: var(--c_emph);

    & svg {
      fill: var(--c_emph);
    }
  }
}

.next {
  right: 0;
  text-align: right;
}

.prev {
  left: 0;
}

.arrow_right,
.arrow_left {
  fill: var(--c_txt);
  width: calc(35rem/var(--f_size));
}

.arrow_left {
  & svg {
    transform: rotate(180deg);
  }
}

